﻿<h3>Version 1.5.1</h3>
<ul>
    <li>Fix null reference exception then accessing empty viewstate.</li>
</ul>

<h3>Version 1.5.0</h3>
<p>Main goal: Enhance DivisionDirectory module obrnadzor.gov.ru mode.</p>
<ul>
    <li>Add ability loose-link divisions and head employees by specifying required position.</li>
    <li>Partial support for virtual divisions (which generally w/o employees).</li>
    <li>EditDivision: support for new division properties.</li>
    <li>Implement hierarchical sorting of divisions.</li>
    <li>Some visual enhancements - indents, block dividers.</li>
    <li>Other small updates and fixes.</li>
</ul>

<h3>Version 1.4.0</h3>
<p>Main goal: Add support for documents and document types and allow to manage educational program documents.</p>

<h3>Version 1.3.1</h3>
<ul>
    <li>Fix #77: EditEmployee: crash when opening in DNN 7.4.2.</li>
    <li>Update uninstall script to drop tables and views added in 1.3.0.</li>
    <li>Set library and module CoreVersion dependency to DNN 7.4.0.</li>
</ul>

<h3>Version 1.3.0</h3>
<p><strong>Important change:</strong> Educational programs and educational profiles were separated. 
Install script perform DB schema change and also safely move data between new tables.</p>
<p><strong>Before upgrade:</strong> Make sure, what University_EduProgram table don't have any records
with null or empty Code field and all Code values strictly relate to certain educational program. 
Also make database backup before upgrading!</p>
</p>
<ul>
    <li>Add audit and StartDate/EndDate properties to educational program.</li>
    <li>Removed obsolete employee properties: NamePrefix, Disciplines, AcademicDegree, AcademicTitle and corresponding UI/code parts.</li>
    <li>Workaround for #74: External links in achievements not working.</li>
    <li>AjaxControlToolkit.ComboBox upgraded to 15.3.1.</li>
    <li>Code and DB schema refactoring.</li>
</ul>

<h3>Version 1.2.1</h3>
<ul>
    <li>Support for educational program profiles.</li>