@@ -1,6 +1,6 @@
 ﻿<dotnetnuke type="Package" version="5.0">
 	<packages>
-		<package name="R7.University" type="Library" version="01.05.01">
+		<package name="R7.University" type="Library" version="01.06.00">
 			<friendlyName>R7.University</friendlyName>
 			<description>This is a common library for all R7.University modules. By installing this package, you also install all available R7.University modules, such as Launchpad, Division, Employee, EmployeeList, etc.</description>
 			<owner>
@@ -87,9 +87,13 @@
                             <name>SqlDataProvider\01.05.00.SqlDataProvider</name>
                             <version>01.05.00</version>
                         </script>
+                        <script type="Install">
+                            <name>SqlDataProvider\01.06.00.SqlDataProvider</name>
+                            <version>01.06.00</version>
+                        </script>
                         <script type="UnInstall">
                             <name>SqlDataProvider\Uninstall.SqlDataProvider</name>
-                            <version>01.05.01</version>
+                            <version>01.06.00</version>
                         </script>
 					</scripts>
 				</component>
@@ -130,7 +134,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.Launchpad" type="Module" version="01.05.01">
+		<package name="R7.University.Launchpad" type="Module" version="01.06.00">
 			<friendlyName>R7.University.Launchpad</friendlyName>
 			<description>This is a simple module to display some records from database table.</description>
 			<owner>
@@ -303,7 +307,7 @@
 				</component>
       		</components>
 		</package>
-		<package name="R7.University.Employee" type="Module" version="01.05.01">
+		<package name="R7.University.Employee" type="Module" version="01.06.00">
 			<friendlyName>_Employee</friendlyName>
 			<description>This is a module to display information about single employee.</description>
 			<owner>
@@ -407,7 +411,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.EmployeeDetails" type="Module" version="01.05.01">
+		<package name="R7.University.EmployeeDetails" type="Module" version="01.06.00">
 			<friendlyName>_EmployeeDetails</friendlyName>
 			<description>This is a module to display detailed information about single employee.</description>
 			<owner>
@@ -491,7 +495,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.EmployeeList" type="Module" version="01.05.01">
+		<package name="R7.University.EmployeeList" type="Module" version="01.06.00">
 			<friendlyName>_EmployeeList</friendlyName>
 			<description>This is a simple module to display a list of employees.</description>
 			<owner>
@@ -584,7 +588,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.Division" type="Module" version="01.05.01">
+		<package name="R7.University.Division" type="Module" version="01.06.00">
 			<friendlyName>_Division</friendlyName>
 			<description>This is a module to display information about single division.</description>
 			<owner>
@@ -677,7 +681,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.EmployeeDirectory" type="Module" version="01.05.01">
+		<package name="R7.University.EmployeeDirectory" type="Module" version="01.06.00">
 			<friendlyName>R7.University.EmployeeDirectory</friendlyName>
 			<description>This is a module to display information about employees.</description>
 			<owner>
@@ -770,7 +774,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.DivisionDirectory" type="Module" version="01.05.01">
+		<package name="R7.University.DivisionDirectory" type="Module" version="01.06.00">
 			<friendlyName>R7.University.DivisionDirectory</friendlyName>
 			<description>This is a module to display information about divisions.</description>
 			<owner>
@@ -876,7 +880,7 @@
 				</component>
 			</components>
 		</package>
-        <package name="R7.University.EduProgramDirectory" type="Module" version="01.05.01">
+        <package name="R7.University.EduProgramDirectory" type="Module" version="01.06.00">
             <friendlyName>R7.University.EduProgramDirectory</friendlyName>
             <description>This is a module to display information about educational programs.</description>
             <owner>
